# -MenuCreateWebApp-

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
menuapp/source/main/: api_pyomo_model.py  menu_worker.py  menuapp.py
menuapp/source/main/templates/: base.html  createmenu.html  home.html  item.html  login.html  nutrition.html  showmenu.html  signup.html  userupdate.html
source/main/: menuapp.py
