[project]
name = "menu-app"
version = "0.1.0"
description = ""
authors = [
    {name = "H.H"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask (==2.3.3)",
    "psycopg[binary] (==3.1.18)",
    "flask-sqlalchemy (==3.1.1)",
    "pytz (>=2025.2,<2026.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
